Check for AMDGPU_CREATE_PIXMAP_SCANOUT in amdgpu_glamor_create_pixmap

We must not call glamor_create_pixmap or fbCreatePixmap when it's set.

Closes: https://gitlab.freedesktop.org/xorg/driver/xf86-video-amdgpu/-/issues/21